WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250409
gamepad.vibrationActuator.playEffect() should throw for invalid effect parameters
https://bugs.webkit.org/show_bug.cgi?id=250409
Summary
gamepad.vibrationActuator.playEffect() should throw for invalid effect parame...
Chris Dumez
Reported
2023-01-10 13:46:23 PST
gamepad.vibrationActuator.playEffect() should throw for invalid effect parameters: -
https://w3c.github.io/gamepad/extensions.html#dom-gamepadhapticactuator-playeffect
(Step 1)
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2023-01-10 13:47:58 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8483
EWS
Comment 2
2023-01-10 16:43:16 PST
Committed
258752@main
(f5f611375e53): <
https://commits.webkit.org/258752@main
> Reviewed commits have been landed. Closing PR #8483 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-01-10 16:44:22 PST
<
rdar://problem/104100270
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug