gamepad.vibrationActuator.playEffect() should throw for invalid effect parameters https://bugs.webkit.org/show_bug.cgi?id=250409

Reviewed by Brent Fulgham.

gamepad.vibrationActuator.playEffect() should throw for invalid effect parameters:
- https://w3c.github.io/gamepad/extensions.html#dom-gamepadhapticactuator-playeffect (Step 1)

* LayoutTests/gamepad/gamepad-vibrationActuator-playEffect-validation-expected.txt: Added.
* LayoutTests/gamepad/gamepad-vibrationActuator-playEffect-validation.html: Added.
* Source/WebCore/Modules/gamepad/GamepadHapticActuator.cpp:
(WebCore::areEffectParametersValid):
(WebCore::GamepadHapticActuator::playEffect):
* Source/WebCore/testing/MockGamepad.cpp:
(WebCore::MockGamepad::MockGamepad):

Canonical link: https://commits.webkit.org/258752@main